[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/goblin/goblin_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WalkingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EnemyHitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="WalkingEnemy" type="KinematicBody2D"]
collision_layer = 2147483712
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -0.733038
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.52, 0.789 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/Walk = SubResource( 2 )

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 2147483680
collision_mask = 4
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="EnemyHitbox"]
scale = Vector2( 0.459, 0.5 )
shape = SubResource( 3 )

[node name="EnemyHurtbox" type="Area2D" parent="."]
collision_layer = 2147483664
collision_mask = 2147483656

[node name="Hurtbox" type="CollisionShape2D" parent="EnemyHurtbox"]
scale = Vector2( 0.5, 0.75 )
shape = SubResource( 4 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_area_entered"]
[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
